k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: emotionalbeach
  labels:
    app.kubernetes.io/name: emotionalbeach
    app.kubernetes.io/part-of: emotionalbeach
